--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,46 @@
 	<name>Raspberry Pi - Sunrise / Sunset Power Controller</name>
 	<description>Raspberry Pi - Sunrise / Sunset Power Controller</description>
 
+	<!-- ORGANIZATION -->
+	<organization>
+		<name>SavageHomeAutomation</name>
+		<url>http://www.savagehomeautomation.com</url>
+	</organization>
+
+	<!-- LICENSE -->
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
+
+	<!-- SOURCE CONTROL -->
+	<scm>
+		<url>https://github.com/savagehomeautomation/raspi-sspc.git</url>
+		<connection>scm:git@github.com:savagehomeautomation/raspi-sspc.git</connection>
+	</scm>
+
+	<!-- ISSUE MANAGEMENT -->
+	<issueManagement>
+		<url>https://github.com/savagehomeautomation/raspi-sspc/issues</url>
+		<system>github</system>
+	</issueManagement>
+
+	<!-- DEVELOPERS/CONTRIBUTORS -->
+	<developers>
+		<developer>
+			<name>Robert Savage</name>
+			<url>http://robertsavage.me</url>
+			<organizationUrl>http://www.savagehomeautomation.com</organizationUrl>
+			<roles>
+				<role>owner</role>
+			</roles>
+		</developer>
+	</developers>
+
 	<!-- DEPENDENCIES -->
 	<dependencies>
 		<dependency>
@@ -30,16 +70,57 @@
 					<include>README.md</include>
 				</includes>
 			</resource>
-		</resources>	
+		</resources>
 		<plugins>
+
+			<!-- DEPLOY DOWNLOADABLE ARTIFACTS TO GITHUB -->
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<groupId>com.github.github</groupId>
+				<artifactId>downloads-maven-plugin</artifactId>
+				<version>0.5</version>
 				<configuration>
-					<source />
-					<target />
+					<description>${project.version} build of the Sunrise / Sunset Power
+						Controller for the
+						Raspberry Pi</description>
+					<override>true</override>
+					<repositoryOwner>savagehomeautomation</repositoryOwner>
+					<repositoryName>raspi-sspc</repositoryName>
+					<includeAttached>true</includeAttached>
+					<includes>
+						<include>raspi-sspc*</include>
+					</includes>
 				</configuration>
 			</plugin>
+
+			<!-- JAVA COMPILER -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<showDeprecation>true</showDeprecation>
+					<showWarnings>true</showWarnings>
+					<verbose>true</verbose>
+					<compilerVersion>1.7</compilerVersion>
+				</configuration>
+			</plugin>
+
+			<!-- INCLUDE SOURCE JAR -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
