added build properties

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
 		</developer>
 	</developers>
 
+	<!-- BUILD PROPERTIES -->
+	<properties>
+
+		<!-- PROJECT ENCODING PROPERTIES -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+		<!-- GITHUB PROPERTIES -->
+		<github.global.server>github</github.global.server>
+
+	</properties>
+
 	<!-- DEPENDENCIES -->
 	<dependencies>
 		<dependency>
