updated/fixed build for maven 3.x minor clean up and fixes

--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -4,6 +4,6 @@ Section: misc
 Priority: optional
 Architecture: all
 Depends:
-Maintainer: Robert Savage - www.savageHomeautomation.com
+Maintainer: Robert Savage - www.savagehomeautomation.com
 Description: Sunrise/Sunset Power Controller Application for the Raspberry Pi platform
 Distribution: development
