--- a/pom.xml
+++ b/pom.xml
@@ -60,15 +60,15 @@
 		<github.global.server>github</github.global.server>
 		
 		<!-- DEFAULT RASPBERRY PI PROPERTIES -->
-		<pi.host>pi-sf-wifi</pi.host>
+		<pi.host>192.168.1.1</pi.host>
 		<pi.port>22</pi.port>
 		<pi.user>pi</pi.user>
 		<pi.password>raspberry</pi.password>
 		<pi.transfer>true</pi.transfer>
 		<pi.dirCopyTo>/home/pi</pi.dirCopyTo>
 		
-		<pi4j.version>0.0.4</pi4j.version>
-		<commons-daemon.version>1.0.10</commons-daemon.version>
+		<pi4j.version>1.0-SNAPSHOT</pi4j.version>
+		<commons-daemon.version>1.0.15</commons-daemon.version>
 
 	</properties>
 
@@ -119,30 +119,10 @@
 		</resources>
 		<plugins>
 
-			<!-- DEPLOY DOWNLOADABLE ARTIFACTS TO GITHUB -->
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>downloads-maven-plugin</artifactId>
-				<version>0.5</version>
-				<configuration>
-					<description>${project.version} build of the Sunrise / Sunset Power
-						Controller for the
-						Raspberry Pi</description>
-					<override>true</override>
-					<repositoryOwner>savagehomeautomation</repositoryOwner>
-					<repositoryName>raspi-sspc</repositoryName>
-					<includeAttached>true</includeAttached>
-					<includes>
-						<include>raspi-sspc*</include>
-					</includes>
-				</configuration>
-			</plugin>
-
 			<!-- JAVA COMPILER -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -167,7 +147,7 @@
 				</executions>
 			</plugin>
 
-			<!-- ACQUIRE & STAGE DEPENDENCIES -->
+			<!-- ACQUIRE & STAGE DEPENDENCIES FOR DISTRIBUTION -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -189,195 +169,125 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<groupId>com.github.goldin</groupId>
-				<artifactId>copy-maven-plugin</artifactId>
-				<version>0.2.5</version>
-				<executions>
-					<execution>
-						<id>create-archive</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<resources>
-								<resource>
-									<targetPath>${project.build.directory}/distro-contents/config</targetPath>
-									<directory>${project.basedir}/src/main/resources</directory>
-									<includes>
-										<include>*.properties</include>
-									</includes>
-								</resource>
-								<resource>
-									<targetPath>${project.build.directory}/distro-contents/bin</targetPath>
-									<directory>${project.basedir}/src/main/resources</directory>
-									<includes>
-										<include>start</include>
-										<include>stop</include>
-										<include>debug</include>
-									</includes>
-								</resource>
-								<resource>
-									<targetPath>${project.build.directory}/distro-contents</targetPath>
-									<directory>${project.basedir}</directory>
-									<includes>
-										<include>LICENSE.txt</include>
-										<include>NOTICE.txt</include>
-										<include>README.md</include>
-									</includes>
-								</resource>
-								<resource>
-									<targetPath>${project.build.directory}/distro-contents/lib</targetPath>
-									<directory>${project.build.directory}</directory>
-									<includes>
-										<include>*.jar</include>
-									</includes>
-								</resource>
-								
-								<!-- Create final archive and attach it as Maven artifact -->
-								<resource>
-									<targetPath>${project.build.directory}/${project.build.finalName}.zip</targetPath>
-									<directory>${project.build.directory}/distro-contents</directory>
-									<pack>true</pack>
-									<attachArtifact>true</attachArtifact>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+            <!-- COPY FILES FOR DISTRIBUTION -->
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <configuration>
+                            <tasks>
+                                <copy todir="${project.build.directory}/distro-contents/bin"
+                                      file="${project.basedir}/src/main/resources/start"/>
+                                <copy todir="${project.build.directory}/distro-contents/bin"
+                                      file="${project.basedir}/src/main/resources/stop"/>
+                                <copy todir="${project.build.directory}/distro-contents/bin"
+                                      file="${project.basedir}/src/main/resources/debug"/>
+                                <copy todir="${project.build.directory}/distro-contents"
+                                      file="${project.basedir}/LICENSE.txt"/>
+                                <copy todir="${project.build.directory}/distro-contents"
+                                      file="${project.basedir}/NOTICE.txt"/>
+                                <copy todir="${project.build.directory}/distro-contents"
+                                      file="${project.basedir}/README.md"/>
+                                <copy todir="${project.build.directory}/distro-contents/lib">
+                                    <fileset dir="${project.build.directory}/" includes="*.jar"/>
+                                </copy>
+                                <copy todir="${project.build.directory}/distro-contents/config">
+                                    <fileset dir="${project.basedir}/src/main/resources" includes="*.properties"/>
+                                </copy>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
 			<!-- CREATE DEBIAN (.DEB) PACKAGE -->
 			<plugin>
 				<artifactId>jdeb</artifactId>
 				<groupId>org.vafer</groupId>
-				<version>0.11</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jdeb</goal>
-						</goals>
-						<configuration>
-							<attach>true</attach>
-							<verbose>true</verbose>
-							<deb>${project.build.directory}/${project.build.finalName}.deb</deb>
-							<installDir>/opt/sspc</installDir>
-							<dataSet>
-								<data>
-									<src>${project.build.directory}/distro-contents/LICENSE.txt</src>
-									<dst>LICENSE</dst>
-									<type>file</type>
-									<dst>/opt/sspc/LICENSE</dst>
-								</data>
-								<data>
-									<src>${project.build.directory}/distro-contents/NOTICE.txt</src>
-									<type>file</type>
-									<dst>/opt/sspc/NOTICE</dst>
-								</data>
-								<data>
-									<src>${project.build.directory}/distro-contents/README.md</src>
-									<type>file</type>
-									<dst>/opt/sspc/README</dst>
-								</data>
-								<data>
-									<src>${project.build.directory}/distro-contents/lib/pi4j-core-${pi4j.version}.jar</src>
-									<type>file</type>
-									<dst>/opt/sspc/lib/pi4j-core-${pi4j.version}.jar</dst>
-								</data>
-								<data>
-									<src>${project.build.directory}/distro-contents/lib/pi4j-device-${pi4j.version}.jar</src>
-									<type>file</type>
-									<dst>/opt/sspc/lib/pi4j-device-${pi4j.version}.jar</dst>
-								</data>
-								<data>
-									<src>${project.build.directory}/distro-contents/lib/commons-daemon-${commons-daemon.version}.jar</src>
-									<type>file</type>
-									<dst>/opt/sspc/lib/commons-daemon-${commons-daemon.version}.jar</dst>
-								</data>
-								<data>
-									<src>${project.build.directory}/distro-contents/lib/${project.build.finalName}.jar</src>
-									<type>file</type>
-									<dst>/opt/sspc/lib/${project.build.finalName}.jar</dst>
-								</data>
-								<data>
-									<src>${project.build.directory}/distro-contents/config/config.properties</src>
-									<type>file</type>
-									<dst>/opt/sspc/config/config.properties</dst>
-								</data>
-								<data>
-									<src>${project.build.directory}/distro-contents/bin</src>
-									<type>directory</type>
-	                                <mapper>
-	                                    <type>perm</type>
-	                                    <prefix>/opt/sspc/bin</prefix>
-	                                    <filemode>755</filemode>
-	                                </mapper>									
-								</data>
-								<data>
-									<src>${project.basedir}/src/main/resources/sspc</src>
-									<type>file</type>
-	                                <mapper>
-	                                    <type>perm</type>
-	                                    <prefix>/etc/init.d</prefix>
-	                                    <filemode>755</filemode>
-	                                </mapper>									
-								</data>
-							</dataSet>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			
-			<!-- OPTIONALLY DEPLOY THE FINAL .DEB TO THE RASBERRY PI -->
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
+				<version>1.3</version>
 
-					<!-- copy the .DEB pacakge file to the Raspberry Pi platform platform -->
-					<execution>
-						<id>transfer-compiled-debian-package</id>
-						<phase>install</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<tasks>
-								<taskdef resource="net/sf/antcontrib/antcontrib.properties"
-									classpathref="maven.plugin.classpath" />
-								<if>
-									<equals arg1="${pi.transfer}" arg2="true" />
-									<then>
-										<!-- copy the JAR file to the Raspberry Pi -->
-										<scp
-											file="${project.build.directory}/${project.build.finalName}.deb"
-											todir="${pi.user}:${pi.password}@${pi.host}:${pi.dirCopyTo}"
-											port="${pi.port}" trust="true" verbose="true" failonerror="true">
-										</scp>
-									</then>
-								</if>
-							</tasks>
-						</configuration>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.ant</groupId>
-						<artifactId>ant-jsch</artifactId>
-						<version>1.7.1</version>
-					</dependency>
-					<dependency>
-						<groupId>com.jcraft</groupId>
-						<artifactId>jsch</artifactId>
-						<version>0.1.42</version>
-					</dependency>
-					<dependency>
-						<groupId>ant-contrib</groupId>
-						<artifactId>ant-contrib</artifactId>
-						<version>20020829</version>
-					</dependency>
-				</dependencies>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jdeb</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
+                <configuration>
+                    <attach>true</attach>
+                    <verbose>true</verbose>
+                    <deb>${project.build.directory}/${project.build.finalName}.deb</deb>
+                    <installDir>/opt/sspc</installDir>
+                    <controlDir>${project.basedir}/src/deb/control</controlDir>
+                    <signPackage>false</signPackage>
+                    <dataSet>
+                        <data>
+                            <src>${project.build.directory}/distro-contents/LICENSE.txt</src>
+                            <dst>LICENSE</dst>
+                            <type>file</type>
+                            <dst>/opt/sspc/LICENSE</dst>
+                        </data>
+                        <data>
+                            <src>${project.build.directory}/distro-contents/NOTICE.txt</src>
+                            <type>file</type>
+                            <dst>/opt/sspc/NOTICE</dst>
+                        </data>
+                        <data>
+                            <src>${project.build.directory}/distro-contents/README.md</src>
+                            <type>file</type>
+                            <dst>/opt/sspc/README</dst>
+                        </data>
+                        <data>
+                            <src>${project.build.directory}/distro-contents/lib/pi4j-core-${pi4j.version}.jar</src>
+                            <type>file</type>
+                            <dst>/opt/sspc/lib/pi4j-core-${pi4j.version}.jar</dst>
+                        </data>
+                        <data>
+                            <src>${project.build.directory}/distro-contents/lib/pi4j-device-${pi4j.version}.jar</src>
+                            <type>file</type>
+                            <dst>/opt/sspc/lib/pi4j-device-${pi4j.version}.jar</dst>
+                        </data>
+                        <data>
+                            <src>${project.build.directory}/distro-contents/lib/commons-daemon-${commons-daemon.version}.jar</src>
+                            <type>file</type>
+                            <dst>/opt/sspc/lib/commons-daemon-${commons-daemon.version}.jar</dst>
+                        </data>
+                        <data>
+                            <src>${project.build.directory}/distro-contents/lib/${project.build.finalName}.jar</src>
+                            <type>file</type>
+                            <dst>/opt/sspc/lib/${project.build.finalName}.jar</dst>
+                        </data>
+                        <data>
+                            <src>${project.build.directory}/distro-contents/config/config.properties</src>
+                            <type>file</type>
+                            <dst>/opt/sspc/config/config.properties</dst>
+                        </data>
+                        <data>
+                            <src>${project.build.directory}/distro-contents/bin</src>
+                            <type>directory</type>
+                            <mapper>
+                                <type>perm</type>
+                                <prefix>/opt/sspc/bin</prefix>
+                                <filemode>755</filemode>
+                            </mapper>
+                        </data>
+                        <data>
+                            <src>${project.basedir}/src/main/resources/sspc</src>
+                            <type>file</type>
+                            <mapper>
+                                <type>perm</type>
+                                <prefix>/etc/init.d</prefix>
+                                <filemode>755</filemode>
+                            </mapper>
+                        </data>
+                    </dataSet>
+                </configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement>
@@ -419,4 +329,73 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+    <profiles>
+        <profile>
+            <id>raspi</id>
+            <build>
+                <plugins>
+                    <!-- OPTIONALLY DEPLOY THE FINAL .DEB TO THE RASBERRY PI -->
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+
+                             <!--copy the .DEB pacakge file to the Raspberry Pi platform platform-->
+                            <execution>
+                            <id>transfer-compiled-debian-package</id>
+                            <phase>install</phase>
+                            <goals>
+                                <goal>run</goal>
+                            </goals>
+                                <configuration>
+                                    <tasks>
+                                        <taskdef resource="net/sf/antcontrib/antcontrib.properties"
+                                        classpathref="maven.plugin.classpath" />
+                                        <if>
+                                        <equals arg1="${pi.transfer}" arg2="true" />
+                                        <then>
+                                             <!--copy the JAR file to the Raspberry Pi-->
+                                            <scp
+                                                file="${project.build.directory}/${project.build.finalName}.deb"
+                                                todir="${pi.user}:${pi.password}@${pi.host}:${pi.dirCopyTo}"
+                                                port="${pi.port}" trust="true" verbose="true" failonerror="true">
+                                            </scp>
+                                        </then>
+                                        </if>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.ant</groupId>
+                                <artifactId>ant-jsch</artifactId>
+                                <version>1.7.1</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>com.jcraft</groupId>
+                                <artifactId>jsch</artifactId>
+                                <version>0.1.42</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>ant-contrib</groupId>
+                                <artifactId>ant-contrib</artifactId>
+                                <version>20020829</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+    <repositories>
+        <repository>
+            <id>oss-snapshots-repo</id>
+            <name>Sonatype OSS Maven Repository</name>
+            <url>https://oss.sonatype.org/content/groups/public</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
